--- a/app/views/workallocation/index.html
+++ b/app/views/workallocation/index.html
@@ -155,6 +155,8 @@ GOV.UK Prototype Kit
 <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-arex?usertype=judiciary&">Roles and access - Add an exclusion - Complete</a><br>Checked with DS - v3.3</p>
 <p><a target="_blank" href="/workallocation/pages/wa-mytasks-ex?usertype=jud iciary&">My tasks - Excluded self</a><br>Checked with DS - v3.3</p>
 
+<p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-coi-del?usertype=judiciary&">Roles and access - Delete an exclusion </a><br>Checked with DS - v3.3</p>
+<p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-ardel?usertype=judiciary&">Roles and access - Delete an exclusion - completed</a><br>Checked with DS - v3.3</p>
 <!-- SECTION BREAK -->
 
 <h2 class="govuk-heading-l">Allocate Legal Ops role (Judicial)</h2>
