--- a/app/views/workallocation/pages/wa-PA-00467-2017-coi-6.html
+++ b/app/views/workallocation/pages/wa-PA-00467-2017-coi-6.html
@@ -13,7 +13,7 @@ Case details
 {% block content %}
 <h1 class="govuk-heading-l">
   <span class="govuk-caption-l">Add an exclusion</span>
-    Check your exclusion
+    Check your answers
 </h1>
 
 <div id="event-name-hint" class="govuk-hint">
