--- a/app/views/workallocation/pages/wa-PA-00467-2017-real-dur.html
+++ b/app/views/workallocation/pages/wa-PA-00467-2017-real-dur.html
@@ -14,7 +14,7 @@ Case details
 
 
 <h1 class="govuk-heading-l">
-  <span class="govuk-caption-l">Reallocate a hearing judge </span>
+  <span class="govuk-caption-l">Reallocate role </span>
     Duration of role
 </h1>
 
