--- a/app/views/workallocation/pages/wa-PA-00467-2017-real.html
+++ b/app/views/workallocation/pages/wa-PA-00467-2017-real.html
@@ -11,7 +11,7 @@ Case details
 {% block content %}
 
 <h1 class="govuk-heading-l">
-  <span class="govuk-caption-l">Reallocate a hearing judge </span>
+  <span class="govuk-caption-l">Reallocate role </span>
     Find the person
 </h1>
 
