--- a/app/views/workallocation/pages/wa-PA-00467-2017-arjra.html
+++ b/app/views/workallocation/pages/wa-PA-00467-2017-arjra.html
@@ -11,7 +11,7 @@ Case details
 {% block content %}
 
 <h1 class="govuk-heading-l">
-  <span class="govuk-caption-l">Hearing judge</span>
+  <!--<span class="govuk-caption-l">Hearing judge</span> -->
     Remove allocation
 </h1>
 
