--- a/app/views/workallocation/pages/assign-task-b.html
+++ b/app/views/workallocation/pages/assign-task-b.html
@@ -7,16 +7,11 @@
 My work
 {% endblock %}
 {% block content %}
-<div class="hmcts-page-heading">
-  <div class="hmcts-page-heading__title">
-    <h1 class="govuk-heading-xl">Assign task</h1>
-  </div>
-</div>
+<h1 class="govuk-heading-l">
+  <span class="govuk-caption-l">Assign task</span>
+  Check your answers
+</h1>
 <div class="govuk-form-group">
-  <h2 class="govuk-label-wrapper"><label class="govuk-label govuk-label--m" for="event-name">
-      Check your assignment
-    </label>
-  </h2>
   <div id="event-name-hint" class="govuk-hint">
     Check you are assigning work to the right person.
   </div>
