--- a/app/views/workallocation/pages/reassign-b.html
+++ b/app/views/workallocation/pages/reassign-b.html
@@ -11,7 +11,7 @@ My work
 
 <h1 class="govuk-heading-l">
   <span class="govuk-caption-l">Reassign task</span>
-  Check your changes
+  Check your answers
 </h1>
 
     <div id="waste-hint" class="govuk-hint">
