--- a/app/views/workallocation/pages/wa-cases-chk.html
+++ b/app/views/workallocation/pages/wa-cases-chk.html
@@ -10,8 +10,8 @@ Case details
 
 {% block content %}
 <h1 class="govuk-heading-l">
-  <span class="govuk-caption-l">Reallocate Lead Judge</span>
-    Check your changes
+  <span class="govuk-caption-l">Reallocate role</span>
+    Check your answers
 </h1>
 
 <div class="govuk-form-group">
