--- a/app/views/workallocation/pages/wa-cases-realdur.html
+++ b/app/views/workallocation/pages/wa-cases-realdur.html
@@ -13,7 +13,7 @@ Case details
 {% block content %}
 
 <h1 class="govuk-heading-l">
-  <span class="govuk-caption-l">Reallocate Lead Judge</span>
+  <span class="govuk-caption-l">Reallocate role</span>
     Duration of role
 </h1>
 <div class="govuk-form-group">
