--- a/app/views/workallocation/pages/assign-task.html
+++ b/app/views/workallocation/pages/assign-task.html
@@ -7,16 +7,12 @@
 My work
 {% endblock %}
 {% block content %}
-<div class="hmcts-page-heading">
-  <div class="hmcts-page-heading__title">
-    <h1 class="govuk-heading-xl">Assign task</h1>
-  </div>
-</div>
+<h1 class="govuk-heading-l">
+  <span class="govuk-caption-l">Assign task</span>
+  Find the person
+</h1>
 <div class="govuk-form-group">
-  <h2 class="govuk-label-wrapper"><label class="govuk-label govuk-label--m" for="event-name">
-      Find the person
-    </label>
-  </h2>
+
   <div id="event-name-hint" class="govuk-hint">
     Type the name of the person and select them.
   </div>
