--- a/app/views/workallocation/pages/wa-cases-real.html
+++ b/app/views/workallocation/pages/wa-cases-real.html
@@ -10,7 +10,7 @@ Case details
 
 {% block content %}
 <h1 class="govuk-heading-l">
-  <span class="govuk-caption-l">Reallocate Lead Judge</span>
+  <span class="govuk-caption-l">Reallocate role</span>
     Find the person
 </h1>
 
