--- a/app/views/workallocation/index.html
+++ b/app/views/workallocation/index.html
@@ -263,7 +263,7 @@ GOV.UK Prototype Kit
   <p><a target="_blank" href="/workallocation/pages/cancel-task?usertype=judiciary&">Cancel a task</a><br>Checked with v3.3</p>
     <p><a target="_blank" href="/workallocation/pages/unassign-task?usertype=judiciary&">Unassign a task</a><br>Checked with v3.3</p>
   <p><a target="_blank" href="/workallocation/pages/wa-allwork-none-o?usertype=judiciary&">Launch page - unassigned</a><br>Checked with v3.3</p>
-  <p><a target="_blank" href="/workallocation/pages/assign-task?usertype=judiciary&">Assign a task</a><br>Checked with v3.3</p>
+  <p><a target="_blank" href="/workallocation/pages/assign-task?usertype=judiciary&">Assign a task</a><br>Checked with v3.3  - updated H1s</p>
   </div>
 
 
