--- a/app/views/workallocation/index.html
+++ b/app/views/workallocation/index.html
@@ -9,7 +9,7 @@ GOV.UK Prototype Kit
       Work allocation prototype
     </h1>
     <h2 class="govuk-heading-l">
-      Last updated (14/06/21)
+      Last updated (16/06/21)
     </h2>
     <p> Updated H1s in identified sections </p>
     <div style="display: flex; margin-top: 80px;">
@@ -187,13 +187,13 @@ GOV.UK Prototype Kit
 <div class="xui-alert-link__number">8  </div>
 <div class="govuk-!-padding-bottom-6"></div>
 
-<h3 class="govuk-heading-m" style="color: red;">My access to be updated following<br> agreement with WA (May 17th)</h3>
+<h3 class="govuk-heading-m" style="color: red;">My access updated</h3>
 
-  <p><a target="_blank" href="/workallocation/pages/wa-myaccess-new?usertype=judiciary&">My access - tab - New case alert - Pending</a><br>Checked with DS - v3.3</p>
+<!--  <p><a target="_blank" href="/workallocation/pages/wa-myaccess-new?usertype=judiciary&">My access - tab - New case alert - Pending</a><br>Checked with DS - v3.3</p>
   <p><a target="_blank" href="/workallocation/pages/wa-myaccess?usertype=judiciary&">My access - tab - pending - viewed</a><br>Checked with DS - v3.3</p>
   <p><a target="_blank" href="/workallocation/pages/wa-myaccess-new-re?usertype=judiciary&">My access - tab - New case alert - Rejected</a><br>Checked with DS - v3.3</p>
   <p><a target="_blank" href="/workallocation/pages/wa-myaccess-tcrvd?usertype=judiciary&">My access - tab - View rejection details</a><br>Checked with DS - v3.3 </p>
-  <p><a target="_blank" href="/workallocation/pages/wa-myaccess-new-re-v?usertype=judiciary&">My access - tab - rejected - viewed</a><br>Checked with DS - v3.3</p>
+  <p><a target="_blank" href="/workallocation/pages/wa-myaccess-new-re-v?usertype=judiciary&">My access - tab - rejected - viewed</a><br>Checked with DS - v3.3</p> -->
   <p><a target="_blank" href="/workallocation/pages/wa-myaccess-new-c?usertype=judiciary&">My access - tab - New case alert - Challenged</a><br>Checked with DS - v3.3</p>
   <p><a target="_blank" href="/workallocation/pages/wa-2018?usertype=judiciary&">My access - tab - case details- Challenged</a><br>Checked with DS - v3.3</p>
   <p><a target="_blank" href="/workallocation/pages/wa-myaccess-new-c-v?usertype=judiciary&">My access - tab - Challenged - viewed</a><br>Checked with DS - v3.3</p>
@@ -450,13 +450,13 @@ GOV.UK Prototype Kit
     <div class="xui-alert-link__number">8  </div>
     <div class="govuk-!-padding-bottom-6"></div>
 
-    <h3 class="govuk-heading-m" style="color: red;">My access to be updated following<br> agreement with WA (May 17th)</h3>
+    <h3 class="govuk-heading-m" style="color: red;">My access updated<br></h3>
 
-    <p><a target="_blank" href="/workallocation/pages/wa-myaccess-new?usertype=staff&">My access - tab - New case alert - Pending</a><br>Checked with DS - v3.3</p>
+  <!--  <p><a target="_blank" href="/workallocation/pages/wa-myaccess-new?usertype=staff&">My access - tab - New case alert - Pending</a><br>Checked with DS - v3.3</p>
     <p><a target="_blank" href="/workallocation/pages/wa-myaccess?usertype=staff&">My access - tab - pending - viewed</a><br>Checked with DS - v3.3</p>
     <p><a target="_blank" href="/workallocation/pages/wa-myaccess-new-re?usertype=staff&">My access - tab - New case alert - Rejected</a><br>Checked with DS - v3.3</p>
     <p><a target="_blank" href="/workallocation/pages/wa-myaccess-tcrvd?usertype=staff&">My access - tab - View rejection details</a><br>Checked with DS - v3.3 </p>
-    <p><a target="_blank" href="/workallocation/pages/wa-myaccess-new-re-v?usertype=staff&">My access - tab - rejected - viewed</a><br>Checked with DS - v3.3</p>
+    <p><a target="_blank" href="/workallocation/pages/wa-myaccess-new-re-v?usertype=staff&">My access - tab - rejected - viewed</a><br>Checked with DS - v3.3</p> -->
     <p><a target="_blank" href="/workallocation/pages/wa-myaccess-new-c?usertype=staff&">My access - tab - New case alert - Challenged</a><br>Checked with DS - v3.3</p>
     <p><a target="_blank" href="/workallocation/pages/wa-2018?usertype=staff&">My access - tab - case details- Challenged</a><br>Checked with DS - v3.3</p>
     <p><a target="_blank" href="/workallocation/pages/wa-myaccess-new-c-v?usertype=staff&">My access - tab - Challenged - viewed</a><br>Checked with DS - v3.3</p>
