--- a/app/views/workallocation/pages/wa-PA-00467-2017-coi-del.html
+++ b/app/views/workallocation/pages/wa-PA-00467-2017-coi-del.html
@@ -43,7 +43,7 @@ Case details
             The case has been remitted from the Upper Tribunal and requires a different judge.
             </dd>
             <dd class="govuk-summary-list__actions">
-            
+
             </dd>
           </div>
           <div class="govuk-summary-list__row">
@@ -51,10 +51,7 @@ Case details
                    Added
                  </dt>
                  <dd class="govuk-summary-list__value">
-                   {{govukTag({
-                   text: now | date( 'subtract', 0, 'days' ) | date,
-                   classes: "govuk-tag--grey"
-                 })}}
+                   {{ now |  date("subtract", 0, "day") | date( "D MMMM YYYY" ) }}
                  </dd>
 <dd class="govuk-summary-list__actions">
   </dd>
