--- a/app/views/workallocation/pages/wa-myaccess.html
+++ b/app/views/workallocation/pages/wa-myaccess.html
@@ -43,14 +43,14 @@ My work
         </li>
       </ul>
     </nav>
-    <p class="govuk-body">Displaying <strong>1</strong> of <strong>1</strong> cases </p>
+  <!--  <p class="govuk-body">Displaying <strong>1</strong> of <strong>1</strong> cases </p> -->
     <table class="govuk-table ">
       <thead class="govuk-table__head">
         <tr class="govuk-table__row">
           <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: auto;" aria-sort="ascending"><button type="button" data-index="0">Case name</button></th>
           <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: auto;" aria-sort="none"><button type="button" data-index="1">Jurisdiction</button></th>
           <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: auto;" aria-sort="none"><button type="button" data-index="1">Case category</button></th>
-          <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: auto;" aria-sort="none"><button type="button" data-index="1">Case role</button></th>
+      <!--    <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: auto;" aria-sort="none"><button type="button" data-index="1">Case role</button></th> -->
           <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: auto;" aria-sort="none"><button type="button" data-index="1">Access</button></th>
           <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: auto;" aria-sort="none"><button type="button" data-index="1">Start</button></th>
           <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: auto;" aria-sort="none"><button type="button" data-index="1">End</button></th>
@@ -58,18 +58,10 @@ My work
         </tr>
       </thead>
       <tbody class="govuk-table__body">
-        <tr class="govuk-table__row">
-          <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Amelia Chu</td>
-          <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Immigration and Asylum</td>
-          <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Protection</td>
-          <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Reviewer</td>
-          <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Specific</td>
-          <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Pending</td>
-          <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
-          <td class="govuk-table__cell">
-            <!-- &nbsp;&nbsp;&nbsp;<a href="myaccess-po" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span>-->
-          </td>
+        <tr>
+            <td colspan="7">Cases you have been granted access to are displayed here.</td>
         </tr>
+
 
       </tbody>
     </table>
