--- a/app/views/workallocation/pages/wa-myaccess-new-assv.html
+++ b/app/views/workallocation/pages/wa-myaccess-new-assv.html
@@ -43,44 +43,32 @@ My work
         </li>
       </ul>
     </nav>
-    <p class="govuk-body">Displaying <strong>1</strong> of <strong>1</strong> cases </p>
+    <p class="govuk-body">Displaying <strong>2</strong> of <strong>2</strong> cases </p>
     <table class="govuk-table ">
       <thead class="govuk-table__head">
         <tr class="govuk-table__row">
           <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: auto;" aria-sort="ascending"><button type="button" data-index="0">Case name</button></th>
           <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: auto;" aria-sort="none"><button type="button" data-index="1">Jurisdiction</button></th>
           <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: auto;" aria-sort="none"><button type="button" data-index="1">Case category</button></th>
-          <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: auto;" aria-sort="none"><button type="button" data-index="1">Case role</button></th>
+      <!--    <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: auto;" aria-sort="none"><button type="button" data-index="1">Case role</button></th> -->
           <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: auto;" aria-sort="none"><button type="button" data-index="1">Access</button></th>
           <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: auto;" aria-sort="none"><button type="button" data-index="1">Start</button></th>
           <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: auto;" aria-sort="none"><button type="button" data-index="1">End</button></th>
-          <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-14" style="width: auto;" aria-sort="none"></th>
+
         </tr>
       </thead>
       <tbody class="govuk-table__body">
 
-        <tr class="govuk-table__row">
-          <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Jonathan Robbins</td>
-          <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Immigration and Asylum</td>
-          <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Protection</td>
-          <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Reviewer</td>
-          <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Specific</td>
-          <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Pending</td>
-          <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
-          <td class="govuk-table__cell">
-            <!-- &nbsp;&nbsp;&nbsp;<a href="myaccess-po" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span>-->
-          </td>
-        </tr>
 
 
         <tr class="govuk-table__row">
           <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><a href="wa-2017">Amelia Chu</a></td>
           <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Immigration and Asylum</td>
           <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Protection</td>
-          <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Reviewer</td>
+      <!--    <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Reviewer</td> -->
           <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Specific</td>
-          <td class="govuk-table__cell govuk-body govuk-!-font-size-19">DD/MM/YYYY</td>
-          <td class="govuk-table__cell govuk-body govuk-!-font-size-19">DD/MM/YYYY</td>
+          <td class="govuk-table__cell govuk-body govuk-!-font-size-19">{{ now |  date("subtract", 0, "day") | date( "D MMMM YYYY" ) }}</td>
+          <td class="govuk-table__cell govuk-body govuk-!-font-size-19">{{ now |  date("add", 7, "day") | date( "D MMMM YYYY" ) }}</td>
           <td class="govuk-table__cell">
             <!-- &nbsp;&nbsp;&nbsp;<a href="myaccess-po" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span>-->
           </td>
@@ -90,27 +78,15 @@ My work
           <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><a href="wa-2018">Robert Saddlebrook</a></td>
           <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Immigration and Asylum</td>
           <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Protection</td>
-          <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Reviewer</td>
+      <!--    <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Reviewer</td> -->
           <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Challenged</td>
-          <td class="govuk-table__cell govuk-body govuk-!-font-size-19">DD/MM/YYYY</td>
-          <td class="govuk-table__cell govuk-body govuk-!-font-size-19">DD/MM/YYYY</td>
+          <td class="govuk-table__cell govuk-body govuk-!-font-size-19">{{ now |  date("subtract", 0, "day") | date( "D MMMM YYYY" ) }}</td>
+          <td class="govuk-table__cell govuk-body govuk-!-font-size-19">{{ now |  date("subtract", 0, "day") | date( "D MMMM YYYY" ) }}</td>
           <td class="govuk-table__cell">
             <!-- &nbsp;&nbsp;&nbsp;<a href="myaccess-po" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span>-->
           </td>
         </tr>
 
-        <tr class="govuk-table__row">
-          <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Stacy Baland</td>
-          <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Immigration and Asylum</td>
-          <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Protection</td>
-          <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Reviewer</td>
-          <td class="govuk-table__cell govuk-body govuk-!-font-size-19">No access</td>
-          <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
-          <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
-          <td class="govuk-table__cell">
-          <a href="#" class="right_m">Review</a>
-          </td>
-        </tr>
 
       </tbody>
     </table>
